--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <nav class="navbar navbar-expand-lg bg-color py-4 pt-lg-5">
     <div class="container">
-        <a class="navbar-brand text-white fw-bold" href="#">Thapa Technical</a>
+        <a class="navbar-brand text-white fw-bold" href="#">Myweboooo</a>
         <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
                 class="navbar-toggler"
                 data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
@@ -73,7 +73,7 @@
             <div class="col-xl-6 xol-lg-6 col-md-12 col-12 order-0 order-lg-1 hero-image--section ">
                 <div class="text-md-end text-center mb-5">
 
-                    <video autoplay class="hero-video--section" loop muted src="./images/hero.mp4">
+                    <video autoplay class="hero-video--section autoplay" loop muted src="images/hero.mp4">
                         Your browser does not support the video tag.
                     </video>
                 </div>
